Hintergrundbild für Lektion 2, Kapitel 3

--- a/teilnehmer/Lektion2-CSS/3-ExternalStyling.css
+++ b/teilnehmer/Lektion2-CSS/3-ExternalStyling.css
@@ -1,5 +1,6 @@
 body {
   background-color: lightgray;
+  background-image: url("mauerhintergrund.gif");
   font-family: Arial;
   font-size: 14pt;
 }
