--- a/teilnehmer/Lektion3-JavaScript/main.css
+++ b/teilnehmer/Lektion3-JavaScript/main.css
@@ -16,3 +16,21 @@ button {
   padding: 5px;
   width: 200px;
 }
+
+input {
+  width: 150px;
+  height: 18px;
+  padding: 2px 5px 2px 5px;
+  border: solid darkgray 4px;
+  font-size: 11pt;
+}
+
+input[type="number"] {
+  width: 40px;
+  text-align: center;
+}
+
+
+div.eingaben {
+  line-height: 220%;
+}
