--- a/teilnehmer/Beispiel-Taschenrechner/taschenrechner.css
+++ b/teilnehmer/Beispiel-Taschenrechner/taschenrechner.css
@@ -3,22 +3,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
-  /* Better text styling */
-  font: bold 14px Arial, sans-serif;
 }
 
 /* Using box shadows to create 3D effects */
 #calculator {
-  width: 240px;
+  width: 353px;
   height: auto;
 
   margin: 10px auto;
-  padding: 10px 0px 0px 10px;
+  padding: 10px 7px 0px 7px;
 
   background: #9dd2ea;
   background: linear-gradient(#9dd2ea, #8bceec);
-  border-radius: 3px;
+  border-radius: 5px;
   box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
@@ -29,21 +26,21 @@
 
 /* Inset shadow on the screen to create indent */
 .top .screen {
-  height: 40px;
-  width: 135px;
+  height: 54px;
+  width: 212px;
 
   float: right;
 
-  margin-right: 18px;
+  margin: 0 7px 14px 7px;
   padding: 0 10px;
 
   background: rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
+  border-radius: 5px;
   box-shadow: inset 0px 4px rgba(0, 0, 0, 0.2);
 
   /* Typography */
-  font-size: 17px;
-  line-height: 40px;
+  font-size: 32px;
+  line-height: 58px;
   color: white;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   text-align: right;
@@ -61,17 +58,19 @@
 
   cursor: pointer;
 
-  width: 66px;
-  height: 36px;
+  width: 99px;
+  height: 54px;
 
   background: white;
-  border-radius: 3px;
+  border-radius: 5px;
   box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
 
-  margin: 0 7px 11px 0;
+  margin: 0px 7px 14px 7px;
 
+  /* Better text styling */
+  font: bold 24px Arial, sans-serif;
   color: #888;
-  line-height: 36px;
+  line-height: 54px;
   text-align: center;
 
   /* prevent selection of text inside keys */
